--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,12 @@ jobs:
             otp: 20.3.8.26
           - elixir: 1.10.4
             otp: 23.1.1
-          - elixir: 1.11.0
+          - elixir: 1.11.x
             otp: 21.3.8.18
-          - elixir: 1.11.0
+          - elixir: 1.11.x
             otp: 23.1.1
     steps:
-      - uses: actions/checkout@v2.3.1
+      - uses: actions/checkout@v2
       - name: Install Dependencies
         run: |
           mix local.rebar --force
@@ -65,7 +65,7 @@ jobs:
           - elixir: 1.11.1
             otp: 23.1.1
     steps:
-      - uses: actions/checkout@v2.3.1
+      - uses: actions/checkout@v2
       - name: Install Dependencies
         run: |
           mix local.rebar --force
@@ -89,8 +89,8 @@ jobs:
   npm_test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2.3.1
-      - uses: actions/setup-elixir@v1.3.0
+      - uses: actions/checkout@v2
+      - uses: actions/setup-elixir@v1
         with:
           otp-version: 23.0.3
           elixir-version: 1.10.4
@@ -100,7 +100,7 @@ jobs:
           mix local.hex --force
           mix deps.get
       - name: Setup Node.js
-        uses: actions/setup-node@v2.1.1
+        uses: actions/setup-node@v2
         with:
           node-version: 12.16
       - name: npm install and test
