--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,9 +16,9 @@ jobs:
             otp: 20.3.8.26
           - elixir: 1.10.4
             otp: 23.1.2
-          - elixir: 1.11.x
+          - elixir: 1.11.2
             otp: 21.3.8.18
-          - elixir: 1.11.x
+          - elixir: 1.11.2
             otp: 23.1.2
     steps:
       - uses: actions/checkout@v2
