--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ jobs:
   test-elixir:
     runs-on: ubuntu-latest
     container:
-      image: hexpm/elixir:${{ matrix.elixir }}-erlang-${{ matrix.otp }}-alpine-3.12.1
+      image: hexpm/elixir:${{ matrix.elixir }}-erlang-${{ matrix.otp }}-alpine-{{ matrix.alpine }}
       env:
         ELIXIR_ASSERT_TIMEOUT: 2000
 
@@ -14,12 +14,17 @@ jobs:
         include:
           - elixir: 1.9.4
             otp: 20.3.8.26
+            alpine: 3.12.0
           - elixir: 1.10.4
             otp: 23.1.2
+            alpine: 3.12.1
           - elixir: 1.11.2
             otp: 21.3.8.18
+            alpine: 3.12.0
           - elixir: 1.11.2
             otp: 23.1.2
+            alpine: 3.12.1
+            
     steps:
       - uses: actions/checkout@v2
       - name: Install Dependencies
@@ -33,7 +38,7 @@ jobs:
   integration-test-elixir:
     runs-on: ubuntu-latest
     container:
-      image: hexpm/elixir:${{ matrix.elixir }}-erlang-${{ matrix.otp }}-alpine-3.12.1
+      image: hexpm/elixir:${{ matrix.elixir }}-erlang-${{ matrix.otp }}-alpine-{{ matrix.alpine }}
       env:
         ELIXIR_ASSERT_TIMEOUT: 2000
     services:
@@ -62,8 +67,10 @@ jobs:
         include:
           - elixir: 1.11.1
             otp: 21.3.8.18
+            alpine: 3.12.0
           - elixir: 1.11.1
             otp: 23.1.2
+            alpine: 3.12.1
     steps:
       - uses: actions/checkout@v2
       - name: Install Dependencies
